# C__LearningNote

./: AllFunctions.h  CMakeLists.txt  README.md  main.cpp
Fold1/: Arrays.cpp  Arrays.h  DataValue.cpp  DataValue.h  Fold1.h  LoopAndJustify.cpp
SomeFunctions/: SystenFunctions.cpp  SystenFunctions.h
