cmake_minimum_required(VERSION 3.20)
project(C__LearningNote)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__LearningNote main.cpp Fold1/DataValue.cpp Fold1/DataValue.h SomeFunctions/SystenFunctions.cpp SomeFunctions/SystenFunctions.h Fold1/Arrays.cpp Fold1/Arrays.h AllFunctions.h Fold1/Fold1.h Fold1/LoopAndJustify.cpp)
